--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ kafka.ratings.topic=ratings
 kafka.comments.topic=comments
 
 #Actuator =====================================================
-management.endpoints.web.exposure.include=info,health,httptrace
+management.endpoints.web.exposure.include=info,health,httptrace,metrics
 # HEALTH ENDPOINT
 management.endpoint.health.show-details=always
 
