--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ kafka.comments.topic=comments
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
+#Admin server =======================================================
+spring.boot.admin.client.url=http://localhost:8080
 #Application config=========================================================
 #Tomcat server port
 server.port=8080
@@ -20,4 +22,4 @@ management.endpoint.shutdown.enabled=true
 
 #LOGGING settings =================================================
 logging.pattern.file=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID}){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx
-logging.file.path=c:/temp/application.log
+logging.file.path=c:/temp/ratings-application.log
